--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             </div>
 
 		</section>
-	<div class="align-center">
-                        <!-- Yeshiva Ivy -->
+<br>                        <!-- Yeshiva Ivy -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-0571788918269551"
@@ -70,7 +69,6 @@
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-        </div>
 		<!-- High School -->
 		<section id="section-High School" class="section pad-bot30 bg-white">
 		<div class="container"> 
@@ -84,8 +82,7 @@
                 
 
 				</div>
-                <div class="align-center">
-                <!-- Yeshiva Ivy -->
+<br>                <!-- Yeshiva Ivy -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-0571788918269551"
@@ -94,7 +91,6 @@
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-                </div>
                 		<!-- University -->
 		<section id="section-University" class="section pad-bot30 bg-white">
 		<div class="container"> 
@@ -107,8 +103,7 @@
                         <div class='tableauPlaceholder' id='viz1482041294451' style='position: relative'><noscript><a href='#'><img alt='University ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaU&#47;University' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482041294451');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
                         
 				</div>
-                <div class="align-center">
-                 <!-- Yeshiva Ivy -->
+<br>                 <!-- Yeshiva Ivy -->
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-0571788918269551"
@@ -117,7 +112,6 @@
                         <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                </div>
 		<!-- contact -->
 		<section id="section-contact" class="section appear clearfix">
 			<div class="container">
@@ -137,8 +131,8 @@
                                     <div class="powr-contact-form" id="d8f88913_1482039367"></div>
 
 						</div>
-                                        <div class="align-center">
-                 <!-- Yeshiva Ivy -->
+<br>
+                        <!-- Yeshiva Ivy -->
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-0571788918269551"
@@ -147,7 +141,6 @@
                         <script>
                         (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                </div>
 					</div>
 					<!-- ./span12 -->
 				</div>
