--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="container"> 
 
 			<div class="row mar-bot40">
-                		<br>                        <!-- Yeshiva Ivy -->
+                     <!-- Yeshiva Ivy -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-0571788918269551"
