--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
 		<!-- High School -->
 		<section id="section-High School" class="section pad-bot30 bg-white">
 		<div class="container"> 
-
-			<div class="row mar-bot40">
                      <!-- Yeshiva Ivy -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -75,8 +73,10 @@
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
+			<div class="row mar-bot40">
+
 					<div class="align-center">
-						<img src="/img/icons/HS.svg" height="200">
+						<img src="/img/icons/HS.png" height="200">
 						<h3 class="text-bold">High School</h3>
                         <h4 class="text-bold">Here you can sort the data by high school</h4>
                             <div class='tableauPlaceholder' id='viz1482041156904' style='position: relative'><noscript><a href='#'><img alt='High School ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaHS&#47;HighSchool' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482041156904');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
@@ -98,7 +98,7 @@
 		
 			<div class="row mar-bot40">
 					<div class="align-center">
-						<img src="/img/icons/University.svg" height="200">
+						<img src="/img/icons/University.png" height="200">
 						<h3 class="text-bold">University</h3>
                         <h4 class="text-bold">Here you can view  the data by University</h4>
                         <div class='tableauPlaceholder' id='viz1482041294451' style='position: relative'><noscript><a href='#'><img alt='University ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaU&#47;University' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482041294451');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
