--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<div class="col-md-offset-3 col-md-6">
 						<div class="section-header">
 							<h2 class="section-heading animated" data-animation="bounceInUp">Submit Data</h2>
-							<p>Is there a mistake in our data that you know about? Please let us know!</p>
+							<p>Is there a mistake in our data? Have something to add? Drop us a line!</p>
 						</div>
 					</div>
 				</div>
