Disclaimer and removed submit data

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							<h2 class="slogan">Welcome to the Yeshiva League Ivy Tracker</h2>
 							<p>
 							Here you can track admissions of current Yeshiva High school students to Ivy League (and Ivy caliber) Universities.
-				
-							</p>	
+							</p>
+                            <p> This data is crowdsourced and has not been certified by any of the high schools or universities.</p>
                         </div>
 					</div>
 				</div>
@@ -131,8 +131,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="cform" id="contact-form">  
-                                <script src="//www.powr.io/powr.js" external-type="html"></script> 
-                                    <div class="powr-contact-form" id="d8f88913_1482039367"></div>
+
+                            
 
 						</div>
 <br>
