--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="fa fa-bars color-white"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Yeshiva Ivy
+					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Yeshiva Universities
 					</a></h1>
 				</div>
 				<div class="navbar-collapse collapse">
@@ -47,9 +47,9 @@
 					<div class="col-md-6 col-md-offset-3">
 						<div class="align-center">
 							<img src="img/Hat.svg" height=64px>
-							<h2 class="slogan">Welcome to the Yeshiva League Ivy Tracker</h2>
+							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
 							<p>
-							Here you can track admissions of current Yeshiva High school students to Ivy League (and Ivy caliber) Universities.
+							Here you can track admissions of current Yeshiva High school students to top-tier universites.
 							</p>
                             <p> This data is crowdsourced and has not been certified by any of the high schools or universities.</p>
                         </div>
