--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- BASICS -->
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Yeshiva League Admission Tracker</title>
+        <title>Yeshiva Grads</title>
         <meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />	
@@ -28,7 +28,7 @@
 						<span class="fa fa-bars color-white"></span>
 					</button>
 					<h1>
-                        <a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Yeshiva Universities
+                        <a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Yeshiva Grads
                         </a>
                     </h1>
 				</div>
