Removed top-tier

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="align-center">
 							<img src="img/Hat.svg" height=64px>
 							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
-							<p>Here you can track admissions of current Yeshiva High school students to top-tier universites.</p>
+							<p>Here you can track admissions of current Yeshiva High school students to universites.</p>
                             <p>This data is crowdsourced and has not been certified by any of the high schools or universities.</p>
                         </div>
 					</div>
