--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<img src="img/Hat.svg" height=64px>
 							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
 							<p>Here you can track admissions of current Yeshiva High school students to universites.</p>
-                            <p>This data is crowdsourced and has not been certified by any of the high schools or universities.</p>
+                            <p>This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact">submitting updates below.</a></p>
                         </div>
 					</div>
 				</div>
