--- a/index.html
+++ b/index.html
@@ -48,20 +48,27 @@
 				<div class="row mar-bot40">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="align-center">
-							<img src="img/Hat.svg" height=64px>
+							<svg version="1.1"
+                                 id="Layer_1"
+                                 xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
+                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                                 y="0px"
+                                 viewBox="0 0 86 50"
+                                 style="enable-background:new 0 0 86 50;"
+                                 xml:space="preserve"
+                                 height="64px">
+                                <style type="text/css">
+                                    .st0{fill:#FFFFFF;}
+                                </style>
+                                <g transform="translate(0,-952.36218)">
+                                    <path class="st0" d="M43,952.4l43,17l-43,17l-43-17L43,952.4z M83,972.7v11.1c-0.6-0.3-1.3-0.4-2-0.4s-1.4,0.2-2,0.4v-9.5L83,972.7
+                                        z M70,977.8v14.5c0,4.2-12,10-27,10s-27-5.8-27-10v-14.5l26.2,10.4c0.5,0.2,1,0.2,1.5,0L70,977.8L70,977.8z M81,985.4
+                                        c1.7,0,3,1.3,3,3c0,1.7-1.3,3-3,3s-3-1.3-3-3C78,986.7,79.3,985.4,81,985.4z"/>
+                                </g>
+                            </svg>
 							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
 							<p>Here you can track admissions of current Yeshiva High school students to universites.</p>
-                                <style>
-                                    a {
-                                        color:#000000;
-                                        text-decoration: underline;
-                                        }
-                                    a:hover {
-                                        color: #ffffff;
-                                        text-decoration: underline;
-                                        }
-                                </style>
-                            <p>This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact">submitting updates below.</a></p>
+                            <p>This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact" class=black>submitting updates below.</a></p>
                         </div>
 					</div>
 				</div>
@@ -83,7 +90,23 @@
             <br>
                 <div class="row mar-bot40">
                     <div class="align-center">
-                        <img src="img/HS.svg" height=200px>
+                        <svg
+                             xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             version="1.1"
+                             x="0px"
+                             y="0px"
+                             viewBox="0 0 24 30"
+                             enable-background="new 0 0 24 24"
+                             xml:space="preserve"
+                             height="200px">
+                            <g>
+                                <polygon points="7,20 5,22 19,22 17.207,20  "/>
+                                <path d="M7,19h2v-5h2v5h2v-5h2v5h2v-6h1v-1l-5-2.5V5.612C14,5.741,15,7.035,16,6c0-1,0-2,0-3c-1.333,1.38-2.667-1.38-4,0   c0,0.333,0,2.333,0,3v3l-6,3v1h1V19z"/>
+                                <path d="M6,14H1v8h2.586L6,19.586V14z M3,18H2v-1h1V18z M3,16H2v-1h1V16z M5,18H4v-1h1V18z M5,16H4v-1h1V16z"/>
+                                <path d="M18,14v5.586L20.414,22H23v-8H18z M20,18h-1v-1h1V18z M20,16h-1v-1h1V16z M22,18h-1v-1h1V18z M22,16h-1v-1h1V16z"/>
+                            </g>
+                        </svg>
                         <h3 class="text-bold">High School</h3>
                         <h4 class="text-bold">Here you can sort the data by high school</h4>
                         <!-- Chart -->
@@ -105,7 +128,29 @@
 		<div class="container"> 
 			<div class="row mar-bot40">
 					<div class="align-center">
-						<img src="img/University.svg" height="200">
+						<svg
+                             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
+                             xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             version="1.1"
+                             x="0px"
+                             y="0px"
+                             viewBox="0 0 100 125"
+                             enable-background="new 0 0 100 100"
+                             xml:space="preserve"
+                             height="200px">
+                            <metadata>
+                                <sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+                                    <slices/>
+                                    <sliceSourceBounds height="16383" width="16383" x="-8141" y="-8142" bottomLeftOrigin="true"/>
+                                </sfw>
+                            </metadata>
+                            <g>
+                                <path d="M85.625,82.749h-71.25c-1.036,0-1.875,0.84-1.875,1.875v5.156h75v-5.156C87.5,83.589,86.66,82.749,85.625,82.749z"/>
+                                <path d="M21.875,40.562v35.156h-5.156c-1.036,0-1.875,0.84-1.875,1.875v2.812h70.312v-2.812c0-1.035-0.84-1.875-1.875-1.875h-5.156   V40.562H68.75v35.156H54.688V40.562h-9.375v35.156H31.25V40.562H21.875z"/>
+                                <path d="M14.844,36.343c0,1.035,0.839,1.875,1.875,1.875h66.562c1.035,0,1.875-0.84,1.875-1.875v-2.812H87.5L50,10.219L12.5,33.531   h2.344V36.343z"/>
+                            </g>
+                        </svg>
 						<h3 class="text-bold">University</h3>
                         <h4 class="text-bold">Here you can view  the data by University</h4>
                         <!-- Chart -->    
