--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <link rel="stylesheet" href="css/style.css">
         <!-- skin -->
 		<link rel="stylesheet" href="skin/default.css">
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/img/manifest.json">
+        <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#70b9b0">
+        <link rel="shortcut icon" href="/img/favicon.ico">
+        <meta name="msapplication-config" content="/img/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
     </head>
 	 
     <body>
