--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<!-- High School -->
 		<section id="section-High School" class="section pad-bot30 bg-white">
             <div class="container"> 
-                <!-- Yeshiva Ivy -->
+                <!-- Google AdSense -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-0571788918269551"
@@ -148,7 +148,7 @@
         <!-- University -->
 		<section id="section-University" class="section pad-bot30 bg-white">
             <br>
-            <!-- Yeshiva Ivy -->
+            <!-- Google AdSense -->
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-0571788918269551"
@@ -216,7 +216,7 @@
         <!-- contact -->
         <section id="section-contact" class="section appear clearfix">
             <br>
-            <!-- Yeshiva Ivy -->
+            <!-- Google AdSense -->
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-0571788918269551"
@@ -243,7 +243,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <br>
-                    <!-- Yeshiva Ivy -->
+                    <!-- Google AdSense -->
                     <ins class="adsbygoogle"
                          style="display:block"
                          data-ad-client="ca-pub-0571788918269551"
@@ -277,7 +277,7 @@
         </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <br>
-        <!-- Yeshiva Ivy -->
+        <!-- Google AdSense -->
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-0571788918269551"
