--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                 </g>
                             </svg>
 							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
-							<h3 class="white">Here you can track admissions of current Yeshiva High school students to universites.</h3>
-                            <h4 class="white">This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact" class=black>submitting updates below.</a></h4>
+							<p>Here you can track admissions of current Yeshiva High school students to universites.</p>
+                            <p>This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact" class=black>submitting updates below.</a></p>
                         </div>
 					</div>
 				</div>
