--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                 </g>
                             </svg>
 							<h2 class="slogan">Welcome to the Yeshiva League College Admissions Tracker</h2>
-							<p>Here you can track admissions of current Yeshiva High school students to universites.</p>
-                            <p>This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact" class=black>submitting updates below.</a></p>
+							<h3 class="white">Here you can track admissions of current Yeshiva High school students to universites.</h3>
+                            <h4 class="white">This data is crowdsourced and has not been verified by any of the high schools or universities. Please help keep the information accurate and current by <a href="#section-contact" class=black>submitting updates below.</a></h4>
                         </div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 		<!-- High School -->
 		<section id="section-High School" class="section pad-bot30 bg-white">
             <div class="container"> 
-                <!-- Google AdSense -->
+                <!-- Yeshiva Ivy -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-0571788918269551"
@@ -127,36 +127,13 @@
                         <h3 class="text-bold">High School</h3>
                         <h4 class="text-bold">Here you can sort the data by high school</h4>
                         <!-- Chart -->
-                        <div class='tableauPlaceholder' id='viz1482047068947' style='position: relative'>
-                            <noscript>
-                                <a href='#'>
-                                    <img alt='High School ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1_rss.png' style='border: none' />
-                                </a>
-                            </noscript>
-                            <object class='tableauViz'  style='display:none;'>
-                                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                                <param name='site_root' value='' /><param name='name' value='IvyYeshivaHS&#47;HighSchool' />
-                                <param name='tabs' value='no' />
-                                <param name='toolbar' value='yes' />
-                                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1.png' />
-                                <param name='animate_transition' value='yes' />
-                                <param name='display_static_image' value='yes' />
-                                <param name='display_spinner' value='yes' />
-                                <param name='display_overlay' value='yes' />
-                                <param name='display_count' value='yes' />
-                            </object>
-                        </div>
-                        <script type='text/javascript'>
-                            var divElement = document.getElementById('viz1482047068947');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height='569px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement); </script>
+                        <div class='tableauPlaceholder' id='viz1482047068947' style='position: relative'><noscript><a href='#'><img alt='High School ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaHS&#47;HighSchool' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaHS&#47;HighSchool&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482047068947');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height='569px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement); </script>
                     </div>
-                </div>
-            </div>
-        </section>
                 
         <!-- University -->
 		<section id="section-University" class="section pad-bot30 bg-white">
             <br>
-            <!-- Google AdSense -->
+            <!-- Yeshiva Ivy -->
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-0571788918269551"
@@ -165,62 +142,39 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-            <div class="container"> 
-                <div class="row mar-bot40">
-                    <div class="align-center">
-                            <svg
-                                 xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 version="1.1"
-                                 x="0px"
-                                 y="0px"
-                                 viewBox="0 0 100 125"
-                                 enable-background="new 0 0 100 100"
-                                 xml:space="preserve"
-                                 height="200px">
-                                <metadata>
-                                    <sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
-                                        <slices/>
-                                        <sliceSourceBounds height="16383" width="16383" x="-8141" y="-8142" bottomLeftOrigin="true"/>
-                                    </sfw>
-                                </metadata>
-                                <g>
-                                    <path d="M85.625,82.749h-71.25c-1.036,0-1.875,0.84-1.875,1.875v5.156h75v-5.156C87.5,83.589,86.66,82.749,85.625,82.749z"/>
-                                    <path d="M21.875,40.562v35.156h-5.156c-1.036,0-1.875,0.84-1.875,1.875v2.812h70.312v-2.812c0-1.035-0.84-1.875-1.875-1.875h-5.156   V40.562H68.75v35.156H54.688V40.562h-9.375v35.156H31.25V40.562H21.875z"/>
-                                    <path d="M14.844,36.343c0,1.035,0.839,1.875,1.875,1.875h66.562c1.035,0,1.875-0.84,1.875-1.875v-2.812H87.5L50,10.219L12.5,33.531   h2.344V36.343z"/>
-                                </g>
-                            </svg>
-                            <h3 class="text-bold">University</h3>
-                            <h4 class="text-bold">Here you can view  the data by University</h4>
-                            <!-- Chart -->    
-                            <div class='tableauPlaceholder' id='viz1482047213467' style='position: relative'>
-                                <noscript>
-                                    <a href='#'>
-                                        <img alt='University ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1_rss.png' style='border: none' />
-                                    </a>
-                                </noscript>
-                                    <object class='tableauViz'  style='display:none;'>
-                                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                                        <param name='site_root' value='' />
-                                        <param name='name' value='IvyYeshivaU&#47;University' />
-                                        <param name='tabs' value='no' />
-                                        <param name='toolbar' value='yes' />
-                                        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1.png' />
-                                        <param name='animate_transition' value='yes' />
-                                        <param name='display_static_image' value='yes' />
-                                        <param name='display_spinner' value='yes' />
-                                        <param name='display_overlay' value='yes' />
-                                        <param name='display_count' value='yes' />
-                                    </object>
-                            </div>
-                        <script type='text/javascript'>
-                                var divElement = document.getElementById('viz1482047213467');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height='569px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-                        </script>
-                    </div>
-                </div>
+		<div class="container"> 
+			<div class="row mar-bot40">
+					<div class="align-center">
+						<svg
+                             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
+                             xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                             version="1.1"
+                             x="0px"
+                             y="0px"
+                             viewBox="0 0 100 125"
+                             enable-background="new 0 0 100 100"
+                             xml:space="preserve"
+                             height="200px">
+                            <metadata>
+                                <sfw xmlns="http://ns.adobe.com/SaveForWeb/1.0/">
+                                    <slices/>
+                                    <sliceSourceBounds height="16383" width="16383" x="-8141" y="-8142" bottomLeftOrigin="true"/>
+                                </sfw>
+                            </metadata>
+                            <g>
+                                <path d="M85.625,82.749h-71.25c-1.036,0-1.875,0.84-1.875,1.875v5.156h75v-5.156C87.5,83.589,86.66,82.749,85.625,82.749z"/>
+                                <path d="M21.875,40.562v35.156h-5.156c-1.036,0-1.875,0.84-1.875,1.875v2.812h70.312v-2.812c0-1.035-0.84-1.875-1.875-1.875h-5.156   V40.562H68.75v35.156H54.688V40.562h-9.375v35.156H31.25V40.562H21.875z"/>
+                                <path d="M14.844,36.343c0,1.035,0.839,1.875,1.875,1.875h66.562c1.035,0,1.875-0.84,1.875-1.875v-2.812H87.5L50,10.219L12.5,33.531   h2.344V36.343z"/>
+                            </g>
+                        </svg>
+						<h3 class="text-bold">University</h3>
+                        <h4 class="text-bold">Here you can view  the data by University</h4>
+                        <!-- Chart -->    
+                        <div class='tableauPlaceholder' id='viz1482047213467' style='position: relative'><noscript><a href='#'><img alt='University ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaU&#47;University' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482047213467');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height='569px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>     
+				    </div>
             </div>
-        </section>
+        </div>
         <!-- contact -->
         <section id="section-contact" class="section appear clearfix">
             <br>
