--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#70b9b0">
         <link rel="shortcut icon" href="/img/favicon.ico">
         <meta name="msapplication-config" content="/img/browserconfig.xml">
-        <meta name="theme-color" content="#ffffff">
+        <meta name="theme-color" content="#70b9b0">
     </head>
 	 
     <body>
