--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <script src="js/stellar.js"></script>
         <script src="js/jquery.appear.js"></script>
         <script src="js/main.js"></script>
-        <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script type="text/javascript">var ssaUrl = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'centro.pixel.ad/iap/2e7564482e5aed4e';new Image().src = ssaUrl;</script>
     </body>
 </html>
