--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-		<div class="container"> 
-			<div class="row mar-bot40">
-					<div class="align-center">
-						<svg
+            <div class="container"> 
+                <div class="row mar-bot40">
+                    <div class="align-center">
+                        <svg
                              xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -168,13 +168,14 @@
                                 <path d="M14.844,36.343c0,1.035,0.839,1.875,1.875,1.875h66.562c1.035,0,1.875-0.84,1.875-1.875v-2.812H87.5L50,10.219L12.5,33.531   h2.344V36.343z"/>
                             </g>
                         </svg>
-						<h3 class="text-bold">University</h3>
+                        <h3 class="text-bold">University</h3>
                         <h4 class="text-bold">Here you can view  the data by University</h4>
                         <!-- Chart -->    
                         <div class='tableauPlaceholder' id='viz1482047213467' style='position: relative'><noscript><a href='#'><img alt='University ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='IvyYeshivaU&#47;University' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Iv&#47;IvyYeshivaU&#47;University&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1482047213467');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height='569px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>     
-				    </div>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
         <!-- contact -->
         <section id="section-contact" class="section appear clearfix">
             <br>
